5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1613_1800.log
== TEST (2019-04-04 18:29:39) 
-- CODE:
print round (a ** 2+ b ** 2 + c ** 2))
print round (a + b + c))
-- ERROR:
File "XXXX", line 1
    print round (a ** 2+ b ** 2 + c ** 2))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:37:19) 
-- CODE:
 x == 0
print round (a**2 + b**2 + c**2)/(a+b+c)
-- ERROR:
File "XXXX", line 1
    x == 0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:37:38) 
-- CODE:
 x=0
print round (a**2 + b**2 + c**2)/(a+b+c)
-- ERROR:
File "XXXX", line 1
    x=0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:39:20) 
-- CODE:
print x=0
print round (a**2 + b**2 + c**2)/(a+b+c)
-- ERROR:
File "XXXX", line 1
    print x=0
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(x=0)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:44:46) 
-- CODE:
print round var(a**2 + b**2+c**2)/(a+b+c))
-- ERROR:
File "XXXX", line 1
    print round var(a**2 + b**2+c**2)/(a+b+c))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:45:03) 
-- CODE:
print round var(a**2 + b**2+c**2)/(a+b+c))=0
-- ERROR:
File "XXXX", line 1
    print round var(a**2 + b**2+c**2)/(a+b+c))=0
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:47:11) 
-- CODE:
print round (a**2))
-- ERROR:
File "XXXX", line 1
    print round (a**2))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:47:27) 
-- CODE:
print round (a**2) )
-- ERROR:
File "XXXX", line 1
    print round (a**2) )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:56:31) 
-- CODE:
input (a**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input (a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:56:38) 
-- CODE:
input (a**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input (a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:21:50) 
-- CODE:
a = a
b = b
c = c

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:41:03) 
-- CODE:
a**2
b**2
3**2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:41:16) 
-- CODE:
x= a**2
b**2
3**2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x= a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:42:50) 
-- CODE:
print round (a**2+b**2+c**2))
-- ERROR:
File "XXXX", line 1
    print round (a**2+b**2+c**2))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:05) 
-- CODE:
print round ( a**2 + b**2 + c**2 ))
-- ERROR:
File "XXXX", line 1
    print round ( a**2 + b**2 + c**2 ))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:15) 
-- CODE:
print round ( a**2 + b**2 + c**2 ))

-- ERROR:
File "XXXX", line 1
    print round ( a**2 + b**2 + c**2 ))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:17) 
-- CODE:
print round ( a**2 + b**2 + c**2 ))

-- ERROR:
File "XXXX", line 1
    print round ( a**2 + b**2 + c**2 ))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:18) 
-- CODE:
print round ( a**2 + b**2 + c**2 ))

-- ERROR:
File "XXXX", line 1
    print round ( a**2 + b**2 + c**2 ))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:44:56) 
-- CODE:
print round ( a**2 + b**2 + c**2 )

-- ERROR:
File "XXXX", line 1
    print round ( a**2 + b**2 + c**2 )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
